Fixed youtube video width on mobile

--- a/website/assets/css/master.css
+++ b/website/assets/css/master.css
@@ -99,7 +99,9 @@ body{
     font-size: 100%;
   }
 
-
+.youtube.video{
+  max-width: 90vw;
+}
 
 
 
